language switch in userAdd Stepper implemented

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -237,5 +237,13 @@
     "cameraLastActivity": "Last Activity",
     "cameraStatus": "Status",
     "cameraActions": "Actions"
+  },
+
+  "AddUsersStepper": {
+    "personalInformation": "Personal Information",
+    "helpVideo": "Help Video",
+    "recordVideo": "Record Video",
+    "ConfirmPhotos": "Confirm Photos" 
   }
+
 }
