--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -208,7 +208,8 @@
     "logTitle": "رخدادهای مناطق ممنوعه",
     "galleryBtn": "مشاهده تصاویر",
     "galleryCount": "تعداد تصاویر ضبط شده:",
-    "configTitle": "تنظیمات مناطق ممنوعه"
+    "configTitle": "تنظیمات مناطق ممنوعه",
+    "ExportCsv": "دریافت گزارش"
   },
   "pages": {
     "baseTitle": "سیستم مدیریت هوشمند",
